[package]
name = "turn"
version = "0.0.0"
license = "MIT"
authors = ["Radek Vit <radekvitr@gmail.com>"]
description = "Rust parsing and translation library"
keywords = ["turn", "parsing", "generator"]
readme = "crates-io.md"
edition = "2018"

[lib]
name = "turn"

[dependencies]
derive_builder = "0.9.0"
