[package]
name = "turn_lexer_derive"
version = "0.0.0"
license = "MIT"
authors = ["Radek Vit <radekvitr@gmail.com>"]
description = "Implementation of #[derive(Lexer)]"
keywords = ["turn", "lexer", "lexical analyzer"]
readme = "crates-io.md"
edition = "2018"

[lib]
name = "turn_lexer_derive"
proc-macro = true

[[test]]
name = "tests"
path = "test/tests.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
